# vi-render-service

./: .gitignore  Dockerfile  package-lock.json  package.json  render.yaml  server.js
hermes/: .env.example  .gitignore  PLAN.md  README.md  SAFETY.md  pyproject.toml
hermes/app/: apollo.py  backup.py  bot.py  classify.py  config.py  daemon.py  fill_spreadsheet.py  granola.py  handlers.py  llm.py  notify.py  oauth_setup.py  policy.py  pre_call_prep.py  profiles.py  research.py  salesforce.py  state.py  thought_leadership.py
hermes/app/google/: _safety.py  auth.py  calendar.py  docs.py  drive.py  gmail.py  sheets.py
hermes/app/linkedin/: buffer.py  playwright_scanner.py  scanner.py  suggest.py  triage.py
hermes/app/slack/: actions.py  auth.py  dms.py  events.py  triage.py
hermes/app/web/: __main__.py  auth.py  main.py
hermes/app/web/templates/: base.html  drafts.html  linkedin.html  logs.html  placeholder.html  (+1 more)
hermes/cli/: fill-spreadsheet.md  research-account.md  win-loss.md
hermes/config/: importance.example.yaml
hermes/launchd/: com.vi.hermes.bot.plist  com.vi.hermes.daemon.plist
hermes/manifests/: slack_app_manifest.yaml
hermes/prompts/: draft_reply.md  fill_spreadsheet.md  follow_up.md  linkedin_comment.md  linkedin_post.md  linkedin_triage.md  pre_call_prep.md  research_brief.md  slack_draft_reply.md  slack_triage.md  thought_leadership_piece.md  triage.md
hermes/setup/: CLOUDFLARE.md  cloudflared.config.example.yml  cloudflared.service  install_droplet.sh
hermes/systemd/: hermes-bot.service  hermes-daemon.service  hermes-web.service
(+4 files in other folders)
